--- a/maxstuff.net/public_html/index.html
+++ b/maxstuff.net/public_html/index.html
@@ -1,7 +1,7 @@
 ﻿<!--Main Page www.maxstuff.net/-->
 
 <head>
-  <title>Max's Stuff</title>
+  <title>Captain Max's Site</title>
   <link rel="icon" type="image/icon type" href="favicon/main.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/main.png"/>
   <link rel="stylesheet" href="/main.css">
@@ -9,35 +9,35 @@
 </head>
 <body>
   <h1>
-    Max's Site
+    Ye Old Max's Stuff
   </h1>
   <p>
-    This is my website where I will be showcasing various projects!
+    This is me website where I will be showcasing various projects you scallywags!
   </p>
   <ul>
     <li>
-      <a style="color:red" href="https://www.youtube.com/channel/UCJlhhDO9rS77M0y6txMOJIg">My YouTube Channel</a>
+      <a style="color:red" href="https://www.youtube.com/channel/UCJlhhDO9rS77M0y6txMOJIg">Me Channel On YouTube</a>
     </li>
     <li>
-      <a style="color:cornflowerblue" href="http://scottbot.maxstuff.net/">ScottBot - Scott Morrison Speech Synthesiser (Possibly Very Broken)</a>
+      <a style="color:cornflowerblue" href="http://scottbot.maxstuff.net/">Scotty Bot - Scotty Speech Synthesiser (Ye be warned maybe broken)</a>
     </li>
     <li>
-      <a style="color:orange" href="/oddoneout">Odd One Out Game</a>
+      <a style="color:orange" href="/oddoneout">A Game Called Odd One Out Matey</a>
     </li>
     <li>
-      <a style="color:lightpowderblue" href="http://blog.maxstuff.net/">Blog</a>
+      <a style="color:lightpowderblue" href="http://blog.maxstuff.net/">Me Random Thoughts</a>
     </li>
 		<li>
-      <a style="color:lawngreen" href="/mcskin">Minecraft Skin Renderer</a>
+      <a style="color:lawngreen" href="/mcskin">Picture of ye Minecraft Flesh.</a>
     </li>
 		<li>
-      <a style="color:pink" href="/scoreboard">Scoreboard</a>
+      <a style="color:pink" href="/scoreboard">Which Pirate Is Better Off</a>
     </li>
 		<li>
-      <a style="color:brown" href="http://colesbay.maxstuff.net/">Colesbay Campsite Viewer</a>
+      <a style="color:brown" href="http://colesbay.maxstuff.net/">See The Campsites of Coles Bay</a>
     </li>
 		<li>
-      <a style="color:darkblue" href="/planespot">Plane Spotting Time Finder</a>
+      <a style="color:darkblue" href="/planespot">When shall ye planespot</a>
     </li>
     <!--
     <li>
@@ -55,11 +55,11 @@
     </p>
   <br>--><br>
   <!-- ShareThis BEGIN --><div class="sharethis-inline-share-buttons"></div><!-- ShareThis END -->
-  <h1>Contact Me</h1>
+  <h1>Talk to your captain</h1>
   <p>
     Email - <a href="mailto:me@maxstuff.net">me@maxstuff.net</a><br>
     Discord - MaxFire2008#4700<br><br><br>
-	<a href="http://www.maxstuff.net/cookies">Cookie Policy</a><br>
-	<a href="http://www.maxstuff.net/privacy">Privacy Policy</a>
+	<a href="http://www.maxstuff.net/cookies">Yee Old Cookies</a><br>
+	<a href="http://www.maxstuff.net/privacy">Is this ship private enough?</a>
   </p>
 </body>
