--- a/maxstuff.net/public_html/oddoneout/index.html
+++ b/maxstuff.net/public_html/oddoneout/index.html
@@ -41,20 +41,20 @@
     <p id="puzzleFiveHint" class="hidden hint">Can it store a film or play it?</p>
   </div>
   <div id="congratulationsDiv" class="hidden">
-    <p>Well done! I hope you found this a fun game!<br>
+    <p>Ye scallywag see how you did!<br>
       You used <span id="hintsUsedSpan"></span> hint(s).<br>
       You guessed wrong <span id="wrongGuessSpan"></span> time(s).</p>
     <button onclick="window.location = '';">Play Again!</button>
   </div>
-  <button id="getHint">Stuck? Get a hint!</button>
+  <button id="getHint">You still dumb as a doorknob? Get Hint.</button>
   <script src="script.js"></script>
   <br><br>
   <!-- ShareThis BEGIN --><div class="sharethis-inline-share-buttons"></div><!-- ShareThis END -->
-  <h1>Contact Me</h1>
+  <h1>Talk to your captain</h1>
   <p>
     Email - <a href="mailto:me@maxstuff.net">me@maxstuff.net</a><br>
     Discord - MaxFire2008#4700<br><br><br>
-	<a href="http://www.maxstuff.net/cookies">Cookie Policy</a><br>
-	<a href="http://www.maxstuff.net/privacy">Privacy Policy</a>
+	<a href="http://www.maxstuff.net/cookies">Yee Old Cookies</a><br>
+	<a href="http://www.maxstuff.net/privacy">Is this ship private enough?</a>
   </p>
 </body>
