--- a/maxstuff.net/public_html/mcskin/index.html
+++ b/maxstuff.net/public_html/mcskin/index.html
@@ -1,13 +1,13 @@
 ﻿<!--Main Page www.maxstuff.net/mcskin-->
 
 <head>
-  <title>MC Skin Renderer</title>
+  <title>Picture of ye Minecraft Flesh.</title>
   <link rel="stylesheet" href="/main.css">
   <meta name="description" content="Takes a minecraft player. Makes useless image. Frankly quite a terrible webpage." />
 </head>
 <body>
   <h1>
-Minecraft Skin Renderer!
+Picture of ye Minecraft Flesh.
 </h1>
 
 <ul>
@@ -15,13 +15,13 @@ Minecraft Skin Renderer!
     <input id="skinid" value="ad4231361b3c38c8" placeholder="ad4231361b3c38c8"> Name MC Skin ID
   </li>
   <li>
-    <input id="horizontalrot" value=0 type="number" min=-360 max=360> Rotation Horizontal
+    <input id="horizontalrot" value=0 type="number" min=-360 max=360> How Much Horizontal Turnin'
   </li>
   <li>
-    <input id="verticalrot" value=0 type="number" min=-360 max=360> Rotation Vertical
+    <input id="verticalrot" value=0 type="number" min=-360 max=360> How Much Vertical Turnin'
   </li>
   <li>
-    <input id="time" value=0 type="number"> Leg & Arm Position
+    <input id="time" value=0 type="number"> Where ye limbs be at?
   </li>
 </ul>
 <img id="output" width=500px>
@@ -31,11 +31,11 @@ Minecraft Skin Renderer!
   <br><br>
   <!-- ShareThis BEGIN --><div class="sharethis-inline-share-buttons"></div><!-- ShareThis END -->
   <script src="script.js"></script>
-  <h1>Contact Me</h1>
+  <h1>Talk to your captain</h1>
   <p>
     Email - <a href="mailto:me@maxstuff.net">me@maxstuff.net</a><br>
     Discord - MaxFire2008#4700<br><br><br>
-	<a href="http://www.maxstuff.net/cookies">Cookie Policy</a><br>
-	<a href="http://www.maxstuff.net/privacy">Privacy Policy</a>
+	<a href="http://www.maxstuff.net/cookies">Yee Old Cookies</a><br>
+	<a href="http://www.maxstuff.net/privacy">Is this ship private enough?</a>
   </p>
 </body>
