--- a/maxstuff.net/public_html/index.html
+++ b/maxstuff.net/public_html/index.html
@@ -39,6 +39,9 @@
 		<li>
       <a style="color:darkblue" href="/planespot">Plane Spotting Time Finder</a>
     </li>
+    <li>
+      <a style="color:pink" href="/tsctrl">Top Secret Control Panel!</a>
+	  </li>
     <!--
     <li>
       <a style="color:black" href="http://www.maxstuff.net/">Site Name</a>
